--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: ["main",  "feat/quiz-ui-redesign"]
+    branches: ["main"]
 
 permissions:
   contents: read
